ajustando testes, adicionando calculadora

--- a/usando-modernizr/index.html
+++ b/usando-modernizr/index.html
@@ -22,7 +22,7 @@
 	}
 
 	function validavideo(){
-		if (Modernizr.audio) {
+		if (Modernizr.video) {
 			alert("Seu navegador tem suporte para video")
 		}else{
 			alert("Seu navegador nao tem suporte para video , por favor atualize")
