--- a/calculadora-com-canvas-class/src/index.html
+++ b/calculadora-com-canvas-class/src/index.html
@@ -12,14 +12,14 @@
 
 
         
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/bootstrap-theme.min.min.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/grafico-pizza.css">
-        <link rel="stylesheet" href="css/calculadora.css">
+        <link rel="stylesheet" href="assets/css/normalize.css">
+        <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+        <link rel="stylesheet" href="assets/css/bootstrap-theme.min.min.css">
+        <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="assets/css/grafico-pizza.css">
+        <link rel="stylesheet" href="assets/css/calculadora.css">
 
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+        <script src="assets/js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
         <section class="calculadora">
@@ -114,11 +114,11 @@
 
        	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
        	<script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/calculadora.js"></script>
-        <script src="js/grafico-pizza.js"></script>
-        <script src="js/main.js"></script>
+        <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+        <script src="assets/js/plugins.js"></script>
+        <script src="assets/js/calculadora.js"></script>
+        <script src="assets/js/grafico-pizza.js"></script>
+        <script src="assets/js/main.js"></script>
 
 	
 
